Fixed images and iframes on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -59,7 +59,7 @@ body > * {
 }
 
 img, iframe {
-  max-width: 70ch;
+  width: min(100%, var(--max-width));
 }
 
 pre { overflow: scroll; }
@@ -177,291 +177,4 @@ a:visited {
 a:hover {
   text-decoration: underline;
   text-underline-offset: 0.15em;
-}
-
-/* header h1 {
-  float: left;
-  display: inline-block;
-}
-
-header h1, footer p {
-  text-rendering: optimizeLegibility;
-}
-
-footer p {
-  margin: 0;
-  padding: 0.6em 0;
-}
-
-.page-width {
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-header h1 {
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.4rem !important;
-}
-
-header a, header a:visited {
-  color: var(--text-color);
-}
-
-header nav {
-  display: block;
-  text-align: right;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-header nav ul {
-  list-style: none;
-}
-
-header nav ul li {
-  display: inline-block;
-  padding: 1.5rem 0 1.5rem 3rem;
-  font-weight: 100;
-}
-
-.hero {
-  text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-}
-
-.hero .content {
-  position: relative;
-  max-width: 800px;
-  margin: 0 auto;
-  z-index: 10;
-}
-
-.hero h1 {
-  font-size: 3rem;
-}
-
-.hero h2 {
-  font-weight: 100;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.text-centre {
-  text-align: center;
-}
-
-blockquote{
-  font-size: 1em;
-  font-style: italic;
-  margin: 0;
-  color: var(--blockquote-color)
-}
-
-blockquote::before {
-  content: "\201C";
-}
-
-blockquote::after {
-  content: "\201D"
-}
-
-blockquote p {
-  display: inline;
-  padding-left: 0;
-  padding-right: 0;
-  margin: 0;
-}
-
-code {
-  color: #d5d5d5;
-  font-family: Menlo,"Roboto Mono","Courier New",monospace;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  font-weight: 400;
-  -moz-tab-size: 2;
-  -o-tab-size: 2;
-  tab-size: 2;
-  -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-  border-radius: 6px;
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-
-pre code {
-  display: block;
-  padding: 1rem;
-  overflow: auto;
-  background-color: #333;
-  box-shadow: 2px 3px 20px rgba(0,0,0,.1);
-}
-
-figure {
-  margin: 0;
-}
-
-ul.posts {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 1.0em;
-  font-weight: bold;
-}
-
-ul.posts li {
-  margin-top: 1rem;
-  clear: both;
-}
-
-ul.posts li a {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 65%;
-  display: inline-block;
-}
-
-ul.posts time {
-  font-weight: normal;
-  font-family: Menlo,"Roboto Mono","Courier New",monospace;
-  float: right;
-}
-
-img, iframe, pre {
-  display: block;
-  max-width: 100%;
-  margin: 0 0 1rem;
-}
-
-.video-container {
-	position:relative;
-	padding-bottom:56.25%;
-	padding-top:30px;
-	height:0;
-	overflow:hidden;
-}
-
-.video-container iframe, .video-container object, .video-container embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-}
-
-mark {
-  background-color: #f1dd38;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
-  font-weight: bold;
-  line-height: 1.25;
-  text-rendering: optimizeLegibility;
-}
-
-h1 {
-  font-size: 2rem;
-}
-
-h2 {
-  font-size: 1.5rem;
-}
-
-hr {
-    border: 0;
-    background: #ddd;
-    background: -webkit-gradient(linear,left top,right top,from(rgba(255,255,255,0)),color-stop(#ccc),to(rgba(255,255,255,0)));
-    background: -webkit-linear-gradient(left,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
-    background: linear-gradient(to right,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
-    height: 1px;
-    margin: 2.5em 0;
-}
-
-.nhs {
-  background-color: #005eb8;
-  color: #fff;
-  font-style: italic;
-}
-
-footer {
-  font-size: 0.9em;
-  color: grey;
-}
-
-footer p {
-  font-family: Helvetica, Arial, sans-serif ;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    background: #434346;
-    color: #b0b0b1;
-  }
-  header a, header a:visited {
-    color: #D6D6D7;
-  }
-  blockquote {
-    color: #9e9da0;
-  }
-  a, a:visited {
-    color: #59c7f9;
-  }
-}
-
-@media only screen and (max-width: 1170px) {
-  @supports (padding:max(0px)) {
-    body {
-      box-sizing: border-box;
-      padding-left: env(safe-area-inset-left);
-      padding-right: env(safe-area-inset-right);
-    }
-  }
-
-  .page-width, .container {
-    max-width: 80%;
-  }
-
-  header h1 {
-    padding-top: 1rem;
-    float: none;
-  }
-
-  .hero {
-    padding-top: 0.5rem;
-    padding-bottom: 1rem;
-  }
-
-  .hero h1 {
-    font-size: 1.5rem;
-  }
-
-  .hero h2 {
-    font-size: 1rem;
-  }
-
-  header nav {
-    text-align: left;
-    display: block;
-  }
-
-  header nav ul {
-    padding: 0;
-  }
-
-  header nav ul li:first-child {
-    padding-left: 0;
-  }
-}
-
-@media only screen and (max-width: 844px) {
-  .page-width, .container {
-    max-width: 90%;
-  }
 }
